--- a/forside.css
+++ b/forside.css
@@ -25,7 +25,7 @@ header {
 }
 
 .splash-billede_tekst {
-  color: #ff44ff;
+  color: #170b0d;
   font-family: "Archivo Black", sans-serif;
   font-size: 3rem;
 }
