--- a/portfolio.css
+++ b/portfolio.css
@@ -22,12 +22,44 @@ header {
   top: 0%;
 }
 
-#first_section {
-  background-image: url("/Billeder/portfolio_tekst.png");
-  width: 100%;
-  height: 100vh;
-  background-size: cover;
-  background-position: 10%;
-  position: absolute;
-  margin: 0 auto;
+.splash-billede {
+  text-align: right;
+}
+
+h2 {
+  font-family: "Faster One", cursive;
+  font-size: 2.5rem;
+  color: #1a23fc;
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-top: 180px;
+}
+
+#first_section h3 {
+  font-family: "Montserrat", sans-serif;
+  color: #ff44ff;
+  font-weight: bolder;
+  font-size: 1.5rem;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+p {
+  font-family: "Montserrat", sans-serif;
+  color: #170b0d;
+  font-weight: bolder;
+  font-size: 1.2rem;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+.tema_2 {
+  text-align: left;
+}
+
+footer {
+  margin-top: 80px;
+  min-height: 150px;
+  background-color: #ffff4e;
+  font-family: "Archivo Black", sans-serif;
 }
