--- a/portfolio.css
+++ b/portfolio.css
@@ -44,6 +44,12 @@ h2 {
   margin-left: 30px;
 }
 
+h4 {
+  font-size: 1rem;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
 p {
   font-family: "Montserrat", sans-serif;
   color: #170b0d;
@@ -55,6 +61,11 @@ p {
 
 .tema_2 {
   text-align: left;
+}
+
+.tema_2_billeder {
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 footer {
