--- a/forside.css
+++ b/forside.css
@@ -7,6 +7,7 @@ li {
   text-align: right;
   margin-right: 190px;
   font-family: "Faster One", cursive;
+  font-size: 1.2rem;
   color: #170b0d;
 }
 
