--- a/om.css
+++ b/om.css
@@ -12,7 +12,7 @@ li {
   justify-content: space-evenly;
   margin-right: 40px;
   font-family: "Faster One", cursive;
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #170b0d;
 }
 
@@ -161,8 +161,8 @@ footer {
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background-color: red; /* Set a background color */
-  color: white; /* Text color */
+  background-color: #ff44ff; /* Set a background color */
+  color: #ffff4e; /* Text color */
   cursor: pointer; /* Add a mouse pointer on hover */
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
