--- a/forside.css
+++ b/forside.css
@@ -42,4 +42,28 @@ header {
   margin-left: 210px;
 }
 
-@media (700px);
+@media (max-width: 700px) {
+  #first_section {
+    width: 100%;
+    height: 100vh;
+    background-image: url(/Billeder/splash-billede_tekst.png);
+    background-size: cover;
+    background-position: 88% 100%;
+    margin: 0 auto;
+  }
+
+  header {
+    font-size: 0.5rem;
+    margin-top: 6px;
+    margin-right: 182px;
+    text-align: right;
+  }
+  .splash-billede_tekst {
+    font-size: 2.2rem;
+    margin-top: 60px;
+  }
+
+  .splash-billede_tekst h1 {
+    margin-left: 20px;
+  }
+}
