--- a/portfolio.css
+++ b/portfolio.css
@@ -19,12 +19,7 @@ header {
   text-align: right;
   margin-top: 10px;
 }
-
-.splash-billede {
-  text-align: right;
-}
-
-#first_section {
+s #first_section {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(1, 1fr);
@@ -138,7 +133,7 @@ footer {
   }
 
   p {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
   }
 
   li {
