--- a/om.css
+++ b/om.css
@@ -161,6 +161,7 @@ footer {
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
+  margin-right: 20px;
 }
 
 #button:hover {
