--- a/portfolio.css
+++ b/portfolio.css
@@ -111,6 +111,7 @@ p {
   padding: 15px; /* Some padding */
   border-radius: 10px; /* Rounded corners */
   font-size: 18px; /* Increase font size */
+  margin-right: 20px;
 }
 
 #button:hover {
