--- a/om_mig.css
+++ b/om_mig.css
@@ -26,7 +26,7 @@ header {
 }
 
 #first_section {
-  background-image: url(/billeder/omg_mig_samlet_.png);
+  background-image: url(/billeder/om_mig.png);
   width: 100%;
   height: 100vh;
   background-size: cover;
