--- a/forside_1.css
+++ b/forside_1.css
@@ -46,7 +46,7 @@ header {
   #first_section {
     width: 100%;
     height: 100vh;
-    background-image: url(/Billeder/splash-billede_tekst.png);
+    background-image: url(billeder/splashbillede.webp);
     background-size: cover;
     background-position: 88% 100%;
     margin: 0 auto;
