--- a/om_mig_1.css
+++ b/om_mig_1.css
@@ -26,7 +26,7 @@ header {
 }
 
 #first_section {
-  background-image: url(billeder/om_mig.png);
+  background-image: url(om_mig.png);
   width: 100%;
   height: 100vh;
   background-size: cover;
